Tune up G1GC params