@@ -448,7 +448,9 @@ def myAvailableRam = System.getenv("MAXRAM") ?: (project.findProperty('maxRAM') 
 //applicationDefaultJvmArgs = ["-Xmx${myAvailableRam}","-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=8005"]
 applicationDefaultJvmArgs = ["-Xmx${myAvailableRam}",
                              "-XX:+PrintGCApplicationStoppedTime", "-XX:+PrintGCApplicationConcurrentTime", "-XX:+PrintGCDetails",
-                             "-XX:+PrintGCDateStamps", "-XX:+PrintGCTimeStamps", "-XX:+PrintGCCause", "-Xloggc:gc_stat.log", "-XX:+UseG1GC"]
+                             "-XX:+PrintGCDateStamps", "-XX:+PrintGCTimeStamps", "-XX:+PrintGCCause", "-Xloggc:gc_stat.log", "-XX:+UseG1GC",
+                            "-XX:MaxGCPauseMillis=500", "-XX:G1HeapRegionSize=32m", "-XX:G1ReservePercent=10",
+                             "-XX:ParallelGCThreads=20",  "-XX:ConcGCThreads=8", "-XX:InitiatingHeapOccupancyPercent=70"]
 run {
     if (project.hasProperty("appArgs")) {
         args Eval.me(appArgs)
@@ -470,8 +472,7 @@ run {
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 task execute(type:JavaExec) {
-    jvmArgs = ["-Xmx${myAvailableRam}", "-XX:+PrintGCApplicationStoppedTime", "-XX:+PrintGCApplicationConcurrentTime", "-XX:+PrintGCDetails",
-               "-XX:+PrintGCDateStamps", "-XX:+PrintGCTimeStamps", "-XX:+PrintGCCause", "-Xloggc:gc_stat.log", "-XX:+UseG1GC"]
+    jvmArgs = applicationDefaultJvmArgs
     if(project.hasProperty("mainClass")){
         main = mainClass
     }else{
